fix body overflow problem

--- a/modal/styles.css
+++ b/modal/styles.css
@@ -1,7 +1,12 @@
+html {
+    overflow-y: hidden;
+    height: 100%;
+}
+
 body {
     background: lightblue;
     position: relative;
-    height: 100vh;
+    height: 100%;
 }
 
 #open-btn {
